--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "browser-router": "^0.2.0",
     "concurrently": "^8.2.0",
     "i": "^0.3.7",
@@ -10,12 +12,14 @@
     "package.json": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.0.1",
+    "redux-toolkit": "^1.1.2",
     "swiper": "^9.3.2",
     "tailwindcss-gradients": "^3.0.0",
     "web-vitals": "^2.1.4"
